--- a/composer.json
+++ b/composer.json
@@ -2,11 +2,21 @@
     "name": "laravel/laravel",
     "type": "project",
     "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "keywords": [
+        "framework",
+        "laravel"
+    ],
     "license": "MIT",
+    "repositories": [
+        {
+            "url": "https://github.com/hsoderlind/discogs-api-php.git",
+            "type": "git"
+        }
+    ],
     "require": {
         "php": "^8.1",
         "guzzlehttp/guzzle": "^7.2",
+        "hsoderlind/discogs-api-php": "dev-main",
         "laravel/fortify": "^1.17",
         "laravel/framework": "^10.8",
         "laravel/sanctum": "^3.2",
@@ -64,6 +74,6 @@
             "php-http/discovery": true
         }
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "prefer-stable": true
 }
