--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "php": "^8.1",
         "guzzlehttp/guzzle": "^7.2",
         "hsoderlind/discogs-api-php": "dev-main",
+        "intervention/image-laravel": "^1.2",
         "laravel/fortify": "^1.17",
         "laravel/framework": "^10.16",
         "laravel/sanctum": "^3.2",
