--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "olssonm/swedish-entity": "^1.3",
+        "spatie/laravel-activitylog": "^4.8",
         "spatie/laravel-permission": "^5.10"
     },
     "require-dev": {
